2007-03-20  Riccardo Mottola <riccardo@kaffe.org>

	* WebDocumentRepresentation.h,
	WebDocumentRepresentation.m,
	WebCSSDocumentRepresentation.h,
	WebCSSDocumentRepresentation.m:
	added from myStep

2007-03-13  Rrichard Frith-Macdonald <fm@gnu.org>

	* Sources/NSXMLParser.h:
	* Sources/GNUmakefile:
	* Sources/NSXMLParser.m:
	* Sources/WebHTMLDocumentRepresentation.m: Use standard NSXMLParser
	API rather than duplicating code.
	* Sources/WebFrame.m: Fix broken include that was stopping compile.

2007-03-08  Riccardo Mottola <riccardo@kaffe.org>

	* Sources/GNUmakefile: Added missing classes and headers.


2007-03-08  Riccardo Mottola <riccardo@kaffe.org>

	* Sources/*.[h,m]: updated FSF copyright and LGPL license

2007-03-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SimpleWebKit_INCLUDE_DIRS): Variable removed.
	* Sources/GNUmakefile (SimpleWebKit_INCLUDE_DIRS): Variable removed.
	* Sources/GNUmakefile (SimpleWebKit_HEADER_FILES): Added DOMCore.h