@@ -1,3 +1,7 @@
+2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
+	* WebArchive.*, WebDownload.h, GNUMakefile:
+	added files from myStep
+	
 2007-03-20  Riccardo Mottola <riccardo@kaffe.org>
 
 	* WebDocumentRepresentation.h,
